# Vulkan-DICOM-viewer

./: CMakeLists.txt  README.md  gltfModel.cpp  main.cpp
Includes/: gltfModel.hpp  protoCamera.hpp
Shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
